# The-Instacart-Multi-Model-Analysis

./: .gitignore  .gitkeep  PHASE.md  README.md  analyze_results.py  check_features.py  project.md  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/: __init__.py  base_model.py  basket_size_model.py  churn_prediction_model.py  data_show.py  feature_selector.py  load_data.py  metrics.py  model_registry.py  next_product_model.py  predict.py  preprocess.py  recommendation_model.py  reorder_probability_model.py  train_models.py
src/app/: streamlit_dashboard.py
src/data/: load_data.py
src/evaluation/: create_final_report.py
src/features/: build_features.py
src/inference/: predict.py
src/models/: basket_size_model.py  churn_prediction_model.py  model_registry.py  next_product_model.py  recommendation_model.py  reorder_probability_model.py
src/training/: train_models.py
src/uitls/: config.py
